# waifuatme

./: Cargo.toml  README.txt
src/: main.rs  waifu_pics.rs
