[package]
name = "waifuatme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
futures-util = "0.3.25"
humansize = "2.1.2"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
term_size = "0.3.2"
threadpool = "1.8.1"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
